# guile-gi

./: .dir-locals.el  .gitattributes  .gitignore  .indent.pro  .travis.yml  AUTHORS  ChangeLog  Dockerfile  Makefile  Makefile.am  Makefile.in  Makefile.mingw  Makefile.posix  Makefile.w32  NEWS  README  README.md  bootstrap  bootstrap.sh  configure  configure.ac  gi.scm  gio_arg_infos.txt  glib_arg_infos.txt  gtk_arg_infos.txt  guix.scm  indent-code.el  libtool  meson.build  meson_options.txt  meson_postconf.sh  valgrind.supp
examples/: Makefile.am  browser.scm  builder-manual.scm  cairo.scm  editor.scm  example-1.scm  example-1b.scm  example-1c.scm
examples/builder/: main.scm
examples/empty-window/: empty-app-window.scm  empty-app.scm  main.scm
examples/example1/: exampleapp.scm  exampleappwindow.scm  main.scm
examples/resources/: Makefile.am  main.scm  test.gresource.xml
module/: Makefile.am  gi.scm
module/gi/: compat.scm  config.scm  core-generics.scm  documentation.scm  girepository.scm  logging.scm  oop.scm  parser.scm  repository.scm  runtime.scm  types.scm  util.scm
module/scripts/: gi-gtkdoc.scm  gi-parse.scm
src/: .clang-format  .indent.pro  Makefile.am  clib.h  core.h  fo_gen.c  foreign-object-types.ini  func.h  gi.scm  gi_basictype.c  gi_basictype.h  gi_callable_info.c  gi_callable_info.h  gi_files  gi_function_info.c  gi_function_info.h  gi_gboxed.c  gi_gboxed.h  gi_genum.c  gi_genum.h  gi_gflags.c  gi_gflags.h  gi_giargument.c  gi_giargument.h  gi_ginterface.h  gi_gobject.c  gi_gobject.h  gi_gobject_private.c  gi_gobject_private.h  gi_gparamspec.c  gi_gparamspec.h  gi_gsignal.c  gi_gsignal.h  gi_gstruct.c  gi_gstruct.h  gi_gtype.c  gi_gtype.h  gi_gvalue.c  gi_gvalue.h  gi_signal_closure.c  (+119 more)
src/bleh/: arg_map.c  arg_map.h  argument.c  argument.h  function.c  function.h  logging.h  mem_list.c  mem_list.h  meta_type.c  meta_type.h  repository.c  repository.h  util.c  util.h  visibility.h
src/c/: _string.c  keyval.c  keyval.h  slist.c  strval.c  strval.h  visibility.h
src/core/: README  keyval.c  keyval.h  logging.c  logging.h  mem.c  mem.h  oop.c  oop.h  scm.c  scm.h  slist.c  slist.h  string.c  string.h  strval.c  strval.h  visibility.h
src/doc/: gig_document.c  gig_document.h
src/func/: README  gig_arg_map.c  gig_arg_map.h  gig_arg_map_priv.h  gig_args_store.c  gig_args_store.h  gig_argument.c  gig_argument.h  gig_callback.c  gig_callback.h  gig_callback_priv.h  gig_callback_pub.h  gig_data_type.c  gig_data_type.h  gig_function.c  gig_function.h  gig_function_args.c  gig_function_priv.h  gig_function_pub.h  gig_invoker.c  gig_invoker.h  gig_lib.c  gig_lib.h  gig_util.c  gig_util.h  gig_util_priv.h  gig_util_pub.h
src/g/: goops.c  goops.h  guile.c  guile.h  hooks.c  hooks.h
src/gi/: _error.scm  _gi.scm  _info.scm  _ir.scm  _lib.scm  _none.scm  _object.scm  _propertyhelper.scm  _repository.scm  config.scm.in  core-generics.scm  documentation.scm  fo_gen.c  foreign-object-types.ini  gi_basictype.c  gi_basictype.h  gi_gboxed.c  gi_gboxed.h  gi_genum.c  gi_genum.h  gi_gflags.c  gi_gflags.h  gi_giargument.c  gi_giargument.h  gi_ginterface.c  gi_gobject.c  gi_gobject.h  gi_gparamspec.c  gi_gsignal.c  gi_gstruct.c  gi_gstruct.h  gi_gtype.c  gi_gtype.h  gi_gvalue.c  gi_gvalue.h  gi_signal_closure.c  gi_signal_closure.h  gi_struct.c  gimodule.c  gimodule.h  (+55 more)
src/gir/: _error.scm  _repository.scm
src/parser/: gig_girepository.c
src/repo/: gig_repository.c
src/t/: t_object.c  types.c  types.h  values.c
src/type/: README  gig_boxed.c  gig_boxed.h  gig_closure.c  gig_closure.h  gig_constant.c  gig_constant.h  gig_constant_priv.h  gig_constant_pub.h  gig_flag.c  gig_flag.h  gig_flag_priv.h  gig_flag_pub.h  gig_object.c  gig_object.h  gig_object_priv.h  gig_object_pub.h  gig_signal.c  gig_signal.h  gig_signal_priv.h  gig_signal_pub.h  gig_type.c  gig_type.h  gig_type_priv.h  gig_type_private.c  gig_type_private.h  gig_type_pub.h  gig_types.h  gig_value.c  gig_value.h
src/x/: keyval.c  logging.h  mem.c  slist.c  string.c  string.h  strval.c  visibility.h
src/y/: STATIC_GTYPES.txt  arg.c  arg.h  arg_map.c  arg_map.h  argument.c  argument.h  callback.c  callback.h  closure.c  closure.h  constant.c  constant.h  enum.h  flag.c  flag.h  function.c  function.h  function_args.c  function_args.h  function_private.h  guile.c  guile.h  object.c  object.h  repository.c  repository.h  signal.c  signal.h  type.c  type.h  type_private.c  type_private.h  util.c  util.h  value.c  value.h
test/: BIG_ENDIAN.scm  DIR_SEPARATOR.scm  DIR_SEPARATOR_S.scm  E.scm  GINT32_FORMAT.scm  GirtestTriv.c  GirtestTriv.h  Gtk_sample.scm  MAXINT16.scm  MICRO_VERSION.scm  Makefile.am  SEARCHPATH_SEPARATOR.scm  SEARCHPATH_SEPARATOR_S.scm  _setup.scm  application.scm  atomic_int_set.scm  automake-test-lib.scm  base64_encode.scm  bash-the-hash.scm  browser.scm  build_closure.sh  byte-array.scm  byte_array_new.scm  byte_array_new_take.scm  bytes_new_null.scm  bytes_new_null_contents.scm  bytes_new_null_length.scm  bytes_new_null_size.scm  checksum.scm  closures.c  constants.scm  convert.scm  convert_latin1.scm  date_copy.scm  date_new.scm  datetime.scm  demo-app.scm  editor.scm  everything.scm  example-0.scm  (+64 more)
test/basic_types/: E.scm  GINT32_FORMAT.scm  IEEE754_FLOAT_BIAS.scm  MAXINT16.scm  MAXUINT64.scm  PI.scm
test/byte_array/: byte_array_new.scm  byte_array_new_take.scm  bytes_new_null.scm  bytes_new_null_contents.scm  bytes_new_null_length.scm  bytes_new_null_size.scm
test/byte_order/: BIG_ENDIAN.scm  LITTLE_ENDIAN.scm
test/closure/: simple.scm
test/convert/: ascii.scm  latin1.scm
test/datetime/: date_clear.scm  date_copy.scm  date_new.scm  get_monotonic_time.scm  get_real_time.scm
test/everything/: a21.scm  array-bool-in.scm  array-bool-out.scm  array-enum-in.scm  array-fixed-inout.scm  array-fixed-int-in.scm  array-fixed-int-return.scm  array-fixed-out.scm  array-fixed-short-in.scm  array-fixed-short-return.scm  array-gvariant-container-in.scm  array-gvariant-full-in.scm  array-gvariant-none-in.scm  array-in-guint64-len.scm  array-in-guint8-len.scm  array-in.scm  (+172 more)
(+228 files in other folders)
